--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,8 @@ version: "3.9"
 
 services:
   app:
+    # depends_on:
+    #   - db
     build:
       context: .
       args:
@@ -12,4 +14,29 @@ services:
     volumes:
       - ./app:/app
     command: > 
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py wait_for_db && 
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000
+      "
+    environment:
+    # DB_HOST is the name of the service in the docker-compose file
+      - DB_HOST=db
+    # DB_NAME is the name of the database set in the db service as an environment variable POSTGRES_DB
+      - DB_NAME=devdb
+    # DB_USER is the user set in the db service as an environment variable POSTGRES_USER
+      - DB_USER=user
+    # DB_PASSWORD is the password set in the db service as an environment variable POSTGRES_PASSWORD
+      - DB_PASSWORD=changeme
+    depends_on:
+      -  db
+  db: 
+    image: postgres:13-alpine
+    volumes:
+      - dev-db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=devdb
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=changeme
+
+volumes:
+  dev-db-data:
