--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,14 +10,13 @@ services:
         - DEV=true
     ports:
      - "8000:8000"
-# expose the port 8000 to the host machine     
+# expose the port 8000 to the host machine
     volumes:
       - ./app:/app
-    command: > 
-      sh -c "python manage.py wait_for_db && 
+    command: >
+      sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000
-      "
+             python manage.py runserver 0.0.0.0:8000"
     environment:
     # DB_HOST is the name of the service in the docker-compose file
       - DB_HOST=db
@@ -29,7 +28,7 @@ services:
       - DB_PASSWORD=changeme
     depends_on:
       -  db
-  db: 
+  db:
     image: postgres:13-alpine
     volumes:
       - dev-db-data:/var/lib/postgresql/data
